--- a/sites/resume/index.html
+++ b/sites/resume/index.html
@@ -189,7 +189,7 @@
                         </div>
                     </li>
                     <li>
-                        <p>Node.js<span class="annotation pull-right">70%</span></p>
+                        <p>Node.js<span class="annotation pull-right">80%</span></p>
                         <div class="progress">
                             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
@@ -201,11 +201,24 @@
                         </div>
                     </li>
                     <li>
-                        <p>WebGl<span class="annotation pull-right">70%</span></p>
+                        <p>WebGl<span class="annotation pull-right">80%</span></p>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </li>
+                    <li>
+                        <p>Angular.js<span class="annotation pull-right">70%</span></p>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <p>C#<span class="annotation pull-right">80%</span></p>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </li>
+                    
                 </ul>
             </div>
         </div>
