--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="/css/default.css"/>
 </head>
-<body>
-Hello Mike.
-</body>
+    <body>
+    Hello Mike.
+
+    </body>
 </html>
