Resume: update projects

--- a/sites/resume/index.html
+++ b/sites/resume/index.html
@@ -46,8 +46,7 @@
         <li><a href="#work-experience">Work experience</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#professional-skills">Skills</a></li>
-        <li><a href="#interests">Interests</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#interests">Selected Projects</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
@@ -209,7 +208,7 @@
                     <li>
                         <p>Angular.js<span class="annotation pull-right">70%</span></p>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </li>
                     <li>
@@ -260,15 +259,26 @@
                     <li class="title"><span class="glyphicon glyphicon-heart-empty"></span>Selected Projects</li>
                     <li>
                         <p><strong>Dashya Wallboard</strong></p>
-                        <p class="description"></p>
+                        <p class="description">Dashya is extensible wallboard system build upon node.js. It was created for using by non technical people with usability in mind</p>
                         <p><b>Used technologies: JavaScript, Node.js, CSS, Grunt</b></p>
                         <p><i>Used libs: Angular.js, gridster.js, socket.io, c9/architect.js</i></p>
                     </li>
+                    <li class="static">
+                        <img src="img/dashya/1.PNG" alt="" data-toggle="modal" data-target="#modal-dashya-1">
+                        <img src="img/dashya/2.PNG" alt="" data-toggle="modal" data-target="#modal-dashya-2">
+                        <img src="img/dashya/3.PNG" alt="" data-toggle="modal" data-target="#modal-dashya-3">
+                        <img src="img/dashya/4.PNG" alt="" data-toggle="modal" data-target="#modal-dashya-4">
+                        <img src="img/dashya/5.PNG" alt="" data-toggle="modal" data-target="#modal-dashya-5">
+                    </li>
+                    
                     <li>
                         <p><strong>Webchat</strong></p>
-                        <p class="description"></p>
+                        <p class="description">Simple node.js webchat system integrated with several contact center systems and instant messaging services</p>
                         <p><b>Used technologies: JavaScript, CSS, Node.js, Grunt</b></p>
                         <p><i>Used libs: socket.io</i></p>
+                    </li>
+                     <li class="static">
+                        <img src="img/webchat/1.png" alt="" data-toggle="modal" data-target="#modal-webchat-1">
                     </li>
                     <li>
                         <p><strong>Jtop.js - javascript library</strong></p>
@@ -278,11 +288,25 @@
                         <span class="note">Demo</span>
                         <p><strong><a href="https://developer.mozilla.org/pl/demos/detail/jtop-desktop-interface">https://developer.mozilla.org/pl/demos/detail/jtop-desktop-interface</a></strong></p>
                     </li>
+                    <li class="static">
+                        <img src="img/jtop/1.PNG" alt="" data-toggle="modal" data-target="#modal-jtop-1">
+                        <img src="img/jtop/2.PNG" alt="" data-toggle="modal" data-target="#modal-jtop-2">
+                        <img src="img/jtop/3.PNG" alt="" data-toggle="modal" data-target="#modal-jtop-3">
+                        <img src="img/jtop/4.PNG" alt="" data-toggle="modal" data-target="#modal-jtop-4">
+                        <img src="img/jtop/5.PNG" alt="" data-toggle="modal" data-target="#modal-jtop-5">
+                    </li>
                     <li>
                         <p><strong>Pridesk.com - portfolio service</strong></p>
                         <p class="description">2 year project created with my friend Paweł Bród. Pridesk was designed as portfolio web platform for non-graphicians. There was a lot of JavaScript, HTML and CSS. As a back-end was used PHP + MySQL + fast search engine - Sphinx. Jtop.js library was mainly designed for using in this project. 1 year after publishing we decided to close site due to lack of motivation, funds and marketing experience. It was my biggest success and failure at the same time.</p>
                         <p><b>Used technologies: JavaScript, CSS, PHP, MySQL, Sphinx</b></p>
                         <p><i>Used libs: jtop.js, site.js</i></p>
+                    </li>
+                    <li class="static">
+                        <img src="img/pridesk/1.PNG" alt="" data-toggle="modal" data-target="#modal-pridesk-1">
+                        <img src="img/pridesk/2.PNG" alt="" data-toggle="modal" data-target="#modal-pridesk-2">
+                        <img src="img/pridesk/3.PNG" alt="" data-toggle="modal" data-target="#modal-pridesk-3">
+                        <img src="img/pridesk/4.PNG" alt="" data-toggle="modal" data-target="#modal-pridesk-4">
+                        <img src="img/pridesk/5.PNG" alt="" data-toggle="modal" data-target="#modal-pridesk-5">
                     </li>
                     <li>
                         <p><strong>Phoenix - cms</strong></p>
@@ -295,6 +319,16 @@
                         <img src="img/phoenix/2.PNG" alt="" data-toggle="modal" data-target="#modal-phoenix-2">
                         <img src="img/phoenix/3.PNG" alt="" data-toggle="modal" data-target="#modal-phoenix-3">
                         <img src="img/phoenix/5.PNG" alt="" data-toggle="modal" data-target="#modal-phoenix-4">
+                    </li>
+                     <li>
+                        <p><strong>Ambient Station - 3D demo</strong></p>
+                        <p class="description">3D Demo created on authoring Venue Engine. It's old and need to be improved but I still like it. Created under Coderitual group with Paweł Bród (models, textures)</p>
+                        <p><b>Used technologies: C#, SlimDX(DirectX binding), Venue Engine</b></p>
+                         <span class="note">Youtube</span>
+                        <p><strong><a href="https://www.youtube.com/watch?v=MrIvU5dTIDg">https://www.youtube.com/watch?v=MrIvU5dTIDg</a></strong></p>
+                    </li>
+                    <li class="static">
+                        <img src="img/as/1.jpg" alt="" data-toggle="modal" data-target="#modal-as-1">
                     </li>
                 </ul>
             </div>
@@ -322,16 +356,152 @@
 -->
 <!-- end Portfolio -->
     
-<!-- Modal - photos in zoom-->
-<div id="modal1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+<!-- Modal - dashya in zoom-->
+<div id="modal-dashya-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/jtop/jtop1.PNG" alt="" class="img-responsive">
+            <img src="img/dashya/1.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-dashya-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/dashya/2.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-dashya-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/dashya/3.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-dashya-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/dashya/4.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-dashya-5" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/dashya/5.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<!-- end Modal - photos in zoom--> 
+
+<!-- Modal - webchat in zoom-->
+<div id="modal-webchat-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/webchat/1.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
 <!-- end Modal - photos in zoom-->
-   
+
+<!-- Modal - jtop in zoom-->
+<div id="modal-jtop-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/jtop/1.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-jtop-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/jtop/2.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-jtop-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/jtop/3.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-jtop-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/jtop/4.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-jtop-5" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/jtop/5.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-jtop-6" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/jtop/6.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<!-- end Modal - photos in zoom-->   
+
+<!-- Modal - pridesk in zoom-->
+<div id="modal-pridesk-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/pridesk/1.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-pridesk-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/pridesk/2.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-pridesk-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/pridesk/3.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-pridesk-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/pridesk/4.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<div id="modal-pridesk-5" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/pridesk/5.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<!-- end Modal - photos in zoom-->   
    
 <!-- Modal - phoenix in zoom-->
 <div id="modal-phoenix-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
@@ -362,6 +532,16 @@
     <div class="modal-dialog">
         <div class="modal-box">
             <img src="img/phoenix/5.PNG" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+<!-- end Modal - photos in zoom-->
+
+<!-- Modal - as in zoom-->
+<div id="modal-as-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-box">
+            <img src="img/as/1.jpg" alt="" class="img-responsive">
         </div>
     </div>
 </div>
