--- a/sites/resume/index.html
+++ b/sites/resume/index.html
@@ -264,11 +264,11 @@
                         <p><i>Used libs: Angular.js, gridster.js, socket.io, c9/architect.js</i></p>
                     </li>
                     <li class="static">
-                        <img src="img/dashya/1.PNG" alt="" data-toggle="modal" data-target="#modal-dashya-1">
-                        <img src="img/dashya/2.PNG" alt="" data-toggle="modal" data-target="#modal-dashya-2">
-                        <img src="img/dashya/3.PNG" alt="" data-toggle="modal" data-target="#modal-dashya-3">
-                        <img src="img/dashya/4.PNG" alt="" data-toggle="modal" data-target="#modal-dashya-4">
-                        <img src="img/dashya/5.PNG" alt="" data-toggle="modal" data-target="#modal-dashya-5">
+                        <img src="img/dashya/1.png" alt="" data-toggle="modal" data-target="#modal-dashya-1">
+                        <img src="img/dashya/2.png" alt="" data-toggle="modal" data-target="#modal-dashya-2">
+                        <img src="img/dashya/3.png" alt="" data-toggle="modal" data-target="#modal-dashya-3">
+                        <img src="img/dashya/4.png" alt="" data-toggle="modal" data-target="#modal-dashya-4">
+                        <img src="img/dashya/5.png" alt="" data-toggle="modal" data-target="#modal-dashya-5">
                     </li>
                     
                     <li>
@@ -289,11 +289,11 @@
                         <p><strong><a href="https://developer.mozilla.org/pl/demos/detail/jtop-desktop-interface">https://developer.mozilla.org/pl/demos/detail/jtop-desktop-interface</a></strong></p>
                     </li>
                     <li class="static">
-                        <img src="img/jtop/1.PNG" alt="" data-toggle="modal" data-target="#modal-jtop-1">
-                        <img src="img/jtop/2.PNG" alt="" data-toggle="modal" data-target="#modal-jtop-2">
-                        <img src="img/jtop/3.PNG" alt="" data-toggle="modal" data-target="#modal-jtop-3">
-                        <img src="img/jtop/4.PNG" alt="" data-toggle="modal" data-target="#modal-jtop-4">
-                        <img src="img/jtop/5.PNG" alt="" data-toggle="modal" data-target="#modal-jtop-5">
+                        <img src="img/jtop/1.png" alt="" data-toggle="modal" data-target="#modal-jtop-1">
+                        <img src="img/jtop/2.png" alt="" data-toggle="modal" data-target="#modal-jtop-2">
+                        <img src="img/jtop/3.png" alt="" data-toggle="modal" data-target="#modal-jtop-3">
+                        <img src="img/jtop/4.png" alt="" data-toggle="modal" data-target="#modal-jtop-4">
+                        <img src="img/jtop/5.png" alt="" data-toggle="modal" data-target="#modal-jtop-5">
                     </li>
                     <li>
                         <p><strong>Pridesk.com - portfolio service</strong></p>
@@ -302,11 +302,11 @@
                         <p><i>Used libs: jtop.js, site.js</i></p>
                     </li>
                     <li class="static">
-                        <img src="img/pridesk/1.PNG" alt="" data-toggle="modal" data-target="#modal-pridesk-1">
-                        <img src="img/pridesk/2.PNG" alt="" data-toggle="modal" data-target="#modal-pridesk-2">
-                        <img src="img/pridesk/3.PNG" alt="" data-toggle="modal" data-target="#modal-pridesk-3">
-                        <img src="img/pridesk/4.PNG" alt="" data-toggle="modal" data-target="#modal-pridesk-4">
-                        <img src="img/pridesk/5.PNG" alt="" data-toggle="modal" data-target="#modal-pridesk-5">
+                        <img src="img/pridesk/1.png" alt="" data-toggle="modal" data-target="#modal-pridesk-1">
+                        <img src="img/pridesk/2.png" alt="" data-toggle="modal" data-target="#modal-pridesk-2">
+                        <img src="img/pridesk/3.png" alt="" data-toggle="modal" data-target="#modal-pridesk-3">
+                        <img src="img/pridesk/4.png" alt="" data-toggle="modal" data-target="#modal-pridesk-4">
+                        <img src="img/pridesk/5.png" alt="" data-toggle="modal" data-target="#modal-pridesk-5">
                     </li>
                     <li>
                         <p><strong>Phoenix - cms</strong></p>
@@ -315,10 +315,10 @@
                         
                     </li>
                     <li class="static">
-                        <img src="img/phoenix/1.PNG" alt="" data-toggle="modal" data-target="#modal-phoenix-1">
-                        <img src="img/phoenix/2.PNG" alt="" data-toggle="modal" data-target="#modal-phoenix-2">
-                        <img src="img/phoenix/3.PNG" alt="" data-toggle="modal" data-target="#modal-phoenix-3">
-                        <img src="img/phoenix/5.PNG" alt="" data-toggle="modal" data-target="#modal-phoenix-4">
+                        <img src="img/phoenix/1.png" alt="" data-toggle="modal" data-target="#modal-phoenix-1">
+                        <img src="img/phoenix/2.png" alt="" data-toggle="modal" data-target="#modal-phoenix-2">
+                        <img src="img/phoenix/3.png" alt="" data-toggle="modal" data-target="#modal-phoenix-3">
+                        <img src="img/phoenix/5.png" alt="" data-toggle="modal" data-target="#modal-phoenix-4">
                     </li>
                      <li>
                         <p><strong>Ambient Station - 3D demo</strong></p>
@@ -346,7 +346,7 @@
                 <ul>
                     <li class="title"><span class="glyphicon glyphicon-eye-open"></span>Projects Gallery</li>
                     <li class="static">
-                        <img src="img/jtop/jtop1.PNG" alt="" data-toggle="modal" data-target="#modal1">
+                        <img src="img/jtop/jtop1.png" alt="" data-toggle="modal" data-target="#modal1">
                     </li>
                 </ul>
             </div>
@@ -360,7 +360,7 @@
 <div id="modal-dashya-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/dashya/1.PNG" alt="" class="img-responsive">
+            <img src="img/dashya/1.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -368,7 +368,7 @@
 <div id="modal-dashya-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/dashya/2.PNG" alt="" class="img-responsive">
+            <img src="img/dashya/2.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -376,7 +376,7 @@
 <div id="modal-dashya-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/dashya/3.PNG" alt="" class="img-responsive">
+            <img src="img/dashya/3.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -384,7 +384,7 @@
 <div id="modal-dashya-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/dashya/4.PNG" alt="" class="img-responsive">
+            <img src="img/dashya/4.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -392,7 +392,7 @@
 <div id="modal-dashya-5" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/dashya/5.PNG" alt="" class="img-responsive">
+            <img src="img/dashya/5.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -413,7 +413,7 @@
 <div id="modal-jtop-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/jtop/1.PNG" alt="" class="img-responsive">
+            <img src="img/jtop/1.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -421,7 +421,7 @@
 <div id="modal-jtop-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/jtop/2.PNG" alt="" class="img-responsive">
+            <img src="img/jtop/2.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -429,7 +429,7 @@
 <div id="modal-jtop-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/jtop/3.PNG" alt="" class="img-responsive">
+            <img src="img/jtop/3.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -437,7 +437,7 @@
 <div id="modal-jtop-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/jtop/4.PNG" alt="" class="img-responsive">
+            <img src="img/jtop/4.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -445,7 +445,7 @@
 <div id="modal-jtop-5" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/jtop/5.PNG" alt="" class="img-responsive">
+            <img src="img/jtop/5.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -453,7 +453,7 @@
 <div id="modal-jtop-6" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/jtop/6.PNG" alt="" class="img-responsive">
+            <img src="img/jtop/6.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -464,7 +464,7 @@
 <div id="modal-pridesk-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/pridesk/1.PNG" alt="" class="img-responsive">
+            <img src="img/pridesk/1.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -472,7 +472,7 @@
 <div id="modal-pridesk-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/pridesk/2.PNG" alt="" class="img-responsive">
+            <img src="img/pridesk/2.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -480,7 +480,7 @@
 <div id="modal-pridesk-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/pridesk/3.PNG" alt="" class="img-responsive">
+            <img src="img/pridesk/3.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -488,7 +488,7 @@
 <div id="modal-pridesk-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/pridesk/4.PNG" alt="" class="img-responsive">
+            <img src="img/pridesk/4.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -496,7 +496,7 @@
 <div id="modal-pridesk-5" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/pridesk/5.PNG" alt="" class="img-responsive">
+            <img src="img/pridesk/5.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -507,7 +507,7 @@
 <div id="modal-phoenix-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/phoenix/1.PNG" alt="" class="img-responsive">
+            <img src="img/phoenix/1.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -515,7 +515,7 @@
 <div id="modal-phoenix-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/phoenix/2.PNG" alt="" class="img-responsive">
+            <img src="img/phoenix/2.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -523,7 +523,7 @@
 <div id="modal-phoenix-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/phoenix/3.PNG" alt="" class="img-responsive">
+            <img src="img/phoenix/3.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
@@ -531,7 +531,7 @@
 <div id="modal-phoenix-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-box">
-            <img src="img/phoenix/5.PNG" alt="" class="img-responsive">
+            <img src="img/phoenix/5.png" alt="" class="img-responsive">
         </div>
     </div>
 </div>
