--- a/sites/resume/index.html
+++ b/sites/resume/index.html
@@ -78,7 +78,7 @@
             <div class="col-sm-8 col-sm-offset-2 text-center">
                 <img src="img/me.jpg" class="face" alt="">
                 <hr class="empty">
-                <p class="header-name">Michal Skowronek</p>
+                <p class="header-name">Michał Skowronek</p>
                 <p class="header-title">Javascript and WebGl Programmer</p>
                 <p class="header-subtitle"><b>Hello my name is Michał Skowronek</b> and I'm a Javascript and C# developer from Cracow, Poland. I love UI programming, 3D graphics and well designed stuff. I recently use WebGl as target platform for experiments. </p>
             </div>
@@ -258,6 +258,18 @@
                 <ul>
                     <li class="title"><span class="glyphicon glyphicon-heart-empty"></span>Selected Projects</li>
                     <li>
+                        <p><strong>venue.js</strong></p>
+                        <p class="description">Venue.js is 3D JavaScript framework strongly inspired by XNA/Monogame. It is still in development phase.</p>
+                        <p><b>Used technologies: JavaScript, WebGl</b></p>
+                        <p><i>Used libs: webpack, howler, hand.js, gl-matrix</i></p>
+                    </li>
+                    <li>
+                        <p><strong>cr-001</strong></p>
+                        <p class="description">This WebGl mobile game. It is at an early development stage.</p>
+                        <p><b>Used technologies: JavaScript, WebGl</b></p>
+                        <p><i>Used libs: webpack, venue.js</i></p>
+                    </li>
+                    <li>
                         <p><strong>Dashya Wallboard</strong></p>
                         <p class="description">Dashya is extensible wallboard system build upon node.js. It was created for using by non technical people with usability in mind</p>
                         <p><b>Used technologies: JavaScript, Node.js, CSS, Grunt</b></p>
@@ -322,7 +334,7 @@
                     </li>
                      <li>
                         <p><strong>Ambient Station - 3D demo</strong></p>
-                        <p class="description">3D Demo created on authoring Venue Engine. It's old and need to be improved but I still like it. Created under Coderitual group with Paweł Bród (models, textures)</p>
+                        <p class="description">3D Demo created using authoring Venue Engine. It's quite old and need to be improved but I still like it. Created under Coderitual group with Paweł Bród (models, textures)</p>
                         <p><b>Used technologies: C#, SlimDX(DirectX binding), Venue Engine</b></p>
                          <span class="note">Youtube</span>
                         <p><strong><a href="https://www.youtube.com/watch?v=MrIvU5dTIDg">https://www.youtube.com/watch?v=MrIvU5dTIDg</a></strong></p>
