--- a/sites/resume/index.html
+++ b/sites/resume/index.html
@@ -265,7 +265,7 @@
                     </li>
                     <li>
                         <p><strong>cr-001</strong></p>
-                        <p class="description">This WebGl mobile game. It is at an early development stage.</p>
+                        <p class="description">This is small WebGl mobile game. It is kind of like techdemo and is at an early development stage.</p>
                         <p><b>Used technologies: JavaScript, WebGl</b></p>
                         <p><i>Used libs: webpack, venue.js</i></p>
                     </li>
