--- a/sites/resume/index.html
+++ b/sites/resume/index.html
@@ -96,12 +96,12 @@
                     <li class="title"><span class="glyphicon glyphicon-user"></span>Profile</li>
                     <li>
                         <span class="note">Full name</span>
-                        <p><strong>Michal Skowronek</strong></p>
+                        <p><strong>Michał Skowronek</strong></p>
                     </li>
                     <li>
                         <span class="note">Born</span>
                         <p><strong>03 January 1987</strong></p>
-                        <p><strong>Miechow, Poland</strong></p>
+                        <p><strong>Miechów, Poland</strong></p>
                     </li>
                     
                     <li>
