--- a/sites/resume/index.html
+++ b/sites/resume/index.html
@@ -370,7 +370,7 @@
     
 <!-- Modal - dashya in zoom-->
 <div id="modal-dashya-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/dashya/1.png" alt="" class="img-responsive">
         </div>
@@ -378,7 +378,7 @@
 </div>
 
 <div id="modal-dashya-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/dashya/2.png" alt="" class="img-responsive">
         </div>
@@ -386,7 +386,7 @@
 </div>
 
 <div id="modal-dashya-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/dashya/3.png" alt="" class="img-responsive">
         </div>
@@ -394,7 +394,7 @@
 </div>
 
 <div id="modal-dashya-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/dashya/4.png" alt="" class="img-responsive">
         </div>
@@ -402,7 +402,7 @@
 </div>
 
 <div id="modal-dashya-5" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/dashya/5.png" alt="" class="img-responsive">
         </div>
@@ -413,7 +413,7 @@
 
 <!-- Modal - webchat in zoom-->
 <div id="modal-webchat-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/webchat/1.png" alt="" class="img-responsive">
         </div>
@@ -423,7 +423,7 @@
 
 <!-- Modal - jtop in zoom-->
 <div id="modal-jtop-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/jtop/1.png" alt="" class="img-responsive">
         </div>
@@ -431,7 +431,7 @@
 </div>
 
 <div id="modal-jtop-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/jtop/2.png" alt="" class="img-responsive">
         </div>
@@ -439,7 +439,7 @@
 </div>
 
 <div id="modal-jtop-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/jtop/3.png" alt="" class="img-responsive">
         </div>
@@ -447,7 +447,7 @@
 </div>
 
 <div id="modal-jtop-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/jtop/4.png" alt="" class="img-responsive">
         </div>
@@ -455,7 +455,7 @@
 </div>
 
 <div id="modal-jtop-5" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/jtop/5.png" alt="" class="img-responsive">
         </div>
@@ -463,7 +463,7 @@
 </div>
 
 <div id="modal-jtop-6" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/jtop/6.png" alt="" class="img-responsive">
         </div>
@@ -474,7 +474,7 @@
 
 <!-- Modal - pridesk in zoom-->
 <div id="modal-pridesk-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/pridesk/1.png" alt="" class="img-responsive">
         </div>
@@ -482,7 +482,7 @@
 </div>
 
 <div id="modal-pridesk-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/pridesk/2.png" alt="" class="img-responsive">
         </div>
@@ -490,7 +490,7 @@
 </div>
 
 <div id="modal-pridesk-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/pridesk/3.png" alt="" class="img-responsive">
         </div>
@@ -498,7 +498,7 @@
 </div>
 
 <div id="modal-pridesk-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/pridesk/4.png" alt="" class="img-responsive">
         </div>
@@ -506,7 +506,7 @@
 </div>
 
 <div id="modal-pridesk-5" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/pridesk/5.png" alt="" class="img-responsive">
         </div>
@@ -517,7 +517,7 @@
    
 <!-- Modal - phoenix in zoom-->
 <div id="modal-phoenix-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/phoenix/1.png" alt="" class="img-responsive">
         </div>
@@ -525,7 +525,7 @@
 </div>
 
 <div id="modal-phoenix-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/phoenix/2.png" alt="" class="img-responsive">
         </div>
@@ -533,7 +533,7 @@
 </div>
 
 <div id="modal-phoenix-3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/phoenix/3.png" alt="" class="img-responsive">
         </div>
@@ -541,7 +541,7 @@
 </div>
 
 <div id="modal-phoenix-4" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/phoenix/5.png" alt="" class="img-responsive">
         </div>
@@ -551,7 +551,7 @@
 
 <!-- Modal - as in zoom-->
 <div id="modal-as-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-box">
             <img src="img/as/1.jpg" alt="" class="img-responsive">
         </div>
