temporary resume, download pdf

--- a/sites/resume/index.html
+++ b/sites/resume/index.html
@@ -34,7 +34,7 @@
 <!-- Top icons -->
 <div class="top-icons">
 	<a class="top-menu hidden-xs hidden-sm" data-toggle="tooltip" data-placement="top" title="Menu toggle"><span class="glyphicon glyphicon-th-list"></span></a>
-	<a href="#" class="top-download-resume hidden-xs hidden-sm" data-toggle="tooltip" data-placement="top" title="Download resume"><span class="glyphicon glyphicon-cloud-download"></span></a>
+	<a href="data/cv_8.pdf" class="top-download-resume hidden-xs hidden-sm" data-toggle="tooltip" data-placement="top" title="Download resume"><span class="glyphicon glyphicon-cloud-download"></span></a>
 	<a class="top-contact hidden-xs hidden-sm" data-toggle="tooltip" data-placement="top" title="Contact me"><span class="glyphicon glyphicon-send"></span></a>
 </div>
 <!-- end Top icons -->
@@ -101,7 +101,6 @@
                     <li>
                         <span class="note">Born</span>
                         <p><strong>03 January 1987</strong></p>
-                        <p><strong>Miechów, Poland</strong></p>
                     </li>
                     
                     <li>
@@ -320,6 +319,7 @@
                         <img src="img/pridesk/4.png" alt="" data-toggle="modal" data-target="#modal-pridesk-4">
                         <img src="img/pridesk/5.png" alt="" data-toggle="modal" data-target="#modal-pridesk-5">
                     </li>
+                 
                     <li>
                         <p><strong>Phoenix - cms</strong></p>
                         <p class="description">CMS system developed under Coderitual group. It has plugin architecture so creation of customized componets for clients was really fun.</p>
